<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">拼拼看</string>

    <string name="service_error">网络异常</string>

    <!--登录-->
    <string name="enter_the_phone_number">请输入手机号</string>
    <string name="enter_the_password">请输入密码(6~12)位</string>
    <string name="login">登录</string>
    <string name="register_account">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="quick_login">快捷登录</string>
    <string name="iphone_number_not_null">手机号不能为空！</string>
    <string name="password_not_null">密码不能为空!</string>
    <!--注册-->
    <string name="register">注册</string>
    <string name="enter_the_email">请输入电子邮箱</string>
    <string name="enter_the_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="enter_the_invitation_code">请输入邀请码(选填)</string>
    <string name="click_registration_agreement">点击注册即默认同意</string>
    <string name="user_registration_agreement">《用户注册协议》</string>
    <string name="email_not_null">电子邮箱不能为空！</string>
    <string name="verification_code_not_null">验证码不能为空！</string>
    <string name="resend_verification_code">秒后可重新发送</string>

    <!--找回密码-->
    <string name="retrieve_password">找回密码</string>
    <string name="enter_the_current_phone_number">请输入当前手机号</string>
    <string name="confirm_new_password">请确认新密码</string>
    <string name="confirm">提交</string>

    <!--个人中心-->
    <string name="mine_my_wallet">我的钱包</string>
    <string name="mine_my_coupon">我的优惠券</string>
    <string name="mine_my_invitation">我的邀请</string>
    <string name="mine_my_collection">我的收藏</string>
    <string name="mine_my_feedback">意见反馈</string>
    <string name="mine_my_connection">联系我们</string>
    <string name="mine_my_about">关于我们</string>

    <string name="mine_my_order">我的订单</string>
    <string name="mine_all_order">全部订单</string>
    <!--订单部分-->
    <string name="mine_order_all">全部</string>
    <string name="mine_order_delivery">货到付款</string>
    <string name="mine_order_paid">已付款</string>
    <string name="mine_order_refund">退款/售后</string>
    <!--添加地址-->
    <string name="address_manager">地址管理</string>
    <string name="address_add">添加地址</string>
    <string name="address_save">保存</string>
    <string name="address_receiver_name">收货人</string>
    <string name="address_phone">联系电话</string>
    <string name="address_detail">详细地址</string>
    <string name="address_zip_code">邮编</string>
    <string name="address_area">所在区</string>
    <string name="address_state">所在州</string>
    <string name="address_select">请选择</string>
    <string name="address_input_detail">请输入您的详细地址</string>
    <string name="address_default">设为默认地址</string>
    <string name="address_defaulted">默认地址</string>
    <string name="address_editor">编辑地址</string>
    <!--意见反馈-->
    <string name="feedback">意见反馈</string>
    <string name="feedback_input_title">请输入您的意见或者建议</string>
    <string name="feedback_input_content">请输入</string>
    <string name="feedback_submit">提交</string>
    <!--选择区或者州-->
    <string name="select_area">选择区</string>
    <string name="select_state">选择州</string>
    <string name="select_search_hint">请输入邮编或者区名</string>
    <string name="select_now_area">所在区</string>
    <string name="select_zip_code">邮编</string>

    <!--个人资料-->
    <string name="person_data">个人资料</string>
    <string name="person_save">保存</string>
    <string name="person_editor">编辑</string>
    <string name="person_header">头像</string>
    <string name="person_exchange_header">更换\n头像</string>
    <string name="person_id">ID</string>
    <string name="person_name">昵称</string>
    <string name="person_sex">性别</string>
    <string name="person_man">男</string>
    <string name="person_woman">女</string>
    <string name="person_receiver_address">收货地址</string>
    <string name="person_email">邮箱</string>
    <string name="person_phone">手机号</string>

    <!--绑定账号，手机号和邮箱-->
    <string name="binding_phone">绑定手机</string>
    <string name="binding_phone_number">绑定手机号</string>
    <string name="binding_exchange_phone">更换绑定手机</string>
    <string name="binding_email">绑定邮箱</string>
    <string name="binding_email_number">绑定邮箱账号</string>
    <string name="binding_exchange_email">更换绑定邮箱</string>

    <!--我的钱包-->
    <string name="wallet_my">我的钱包</string>
    <string name="wallet_account_balance">账户余额（美元）</string>
    <string name="wallet_recharge">充值</string>
    <string name="wallet_record">我的账本</string>
    <!--充值部分-->
    <string name="recharge_money">充值金额</string>
    <string name="recharge_input_money">请输入充值金额</string>
    <string name="recharge_explain">注：最低充值为1美元，请输入1美元的倍数</string>
    <string name="recharge_pay_way">支付方式</string>
    <string name="recharge_alipay">支付宝</string>
    <string name="recharge_wxpay">微信</string>
    <string name="recharge_pp">PayPal</string>
    <!--我的账本部分-->
    <string name="account_month_select">月份选择</string>
    <string name="account_year">年</string>
    <string name="account_money">月</string>
    <string name="account_total_consume">本月累计消费：$</string>

    <!--设置-->
    <string name="setting">设置</string>
    <string name="setting_update_pwd">修改密码</string>
    <string name="setting_select_language">语言选择</string>
    <string name="setting_delete_cache">清楚缓存</string>
    <string name="setting_now_version">当前版本</string>
    <string name="setting_exit">退出登录</string>
    <string name="setting_notice">通知</string>
    <string name="setting_custom">人工客服</string>

    <!--修改密码-->
    <string name="password_update">修改密码</string>
    <string name="password_input_now_phone">请输入当前手机号</string>
    <string name="password_confirm_new_password">请确认新密码</string>
    <string name="password_submit">提交</string>

    <!--订单模块-->
    <string name="order_title">我的订单</string>
    <string name="order_all">全部订单</string>
    <string name="order_cash">货到付款</string>
    <string name="order_payed">已付款</string>
    <string name="order_callback">退货/售后</string>
    <string name="order_number">订单编号：</string>
    <string name="order_goods_num">共计%1$d件商品</string>
    <string name="order_total_price">合计</string>
    <string name="order_callbacking">售后处理中</string>
    <string name="order_callbacked">售后已完成</string>
    <string name="order_watch_detail">查看详情</string>

    <!--订单详情-->
    <string name="order_detail">订单详情</string>
    <string name="order_goods_total">商品合计</string>
    <string name="order_fright">运费</string>
    <string name="order_discount">优惠券</string>
    <string name="order_real_pay_price">实际支付</string>
    <string name="order_send_time">送货时间</string>
    <string name="order_pay_way">支付方式</string>
    <string name="order_apply_callback">申请售后</string>
    <string name="order_replace">换货</string>
    <string name="order_replace_reason">换货原因</string>
    <string name="item_goods_total">件商品\t\t合计</string>
    <string name="total_goods">全部商品</string>
    <string name="total">共计</string>

    <string name="agree_title">发布即视为同意委托</string>

    <string name="class_type">公益课</string>

</resources>
