<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/recharge_money"
            android:textColor="@color/color_666666"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textColor="@color/color_333333"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edt_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/recharge_input_money"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_CCCCCC"
                android:textSize="35sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@color/view_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/recharge_explain"
            android:textColor="#EC4113"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/recharge_pay_way"
            android:textColor="@color/color_666666"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/rl_alipay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/recharge_alipay"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/recharge_alipay"
                android:textColor="@color/color_333333"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_select_alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_select_theme" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/view_line" />

        <RelativeLayout
            android:id="@+id/rl_wxpay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/recharge_wx"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/recharge_wxpay"
                android:textColor="@color/color_333333"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_select_wxpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_select_no" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/view_line" />

        <RelativeLayout
            android:id="@+id/rl_pp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/recharge_pp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/recharge_pp"
                android:textColor="@color/color_333333"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_select_pp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_select_no" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/view_line" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btn_recharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/login_btn"
            android:text="@string/wallet_recharge"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>