<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FFFFFF"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@mipmap/login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="38dp"
        android:paddingRight="38dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@mipmap/login_shouji" />

        <EditText
            android:id="@+id/edt_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/enter_the_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_C2C2C2"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@color/color_EDEDED" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="38dp"
        android:paddingRight="38dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@mipmap/login_yzm" />

        <EditText
            android:id="@+id/edt_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/enter_the_verification_code"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_C2C2C2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/get_verification_code"
            android:textColor="@color/color_EC5413"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@color/color_EDEDED" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="38dp"
        android:background="@mipmap/login_btn"
        android:text="@string/login"
        android:textColor="@color/color_FFFFFF"
        android:textSize="17sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_register_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textColor="@color/color_EC5413"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/color_C5C5C5" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/color_666666"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/iv_wechat_login"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:background="@color/color_EEEEEE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick_login"
                android:textColor="@color/color_999999"
                android:textSize="13sp" />

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@color/color_EEEEEE" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_wechat_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/login_weixin" />
    </RelativeLayout>

</LinearLayout>